unpackaged/objects/ServiceCloudSLAPriority__mdt.object
<CustomObject>
  <description>To tag cases with the relevant priority based on Case categories, reasons, country, and SBU</description>
  <fields>
    <fullName>CaseCategory__c</fullName>
    <description>Copy of Case Category</description>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Billing</fullName>
          <default>true</default>
          <label>Billing</label>
        </value>
        <value>
          <fullName>Communication &amp; Service</fullName>
        </value>
        <value>
          <fullName>Consignment</fullName>
        </value>
        <value>
          <fullName>Customer Error</fullName>
        </value>
        <value>
          <fullName>Customer Interaction</fullName>
        </value>
        <value>
          <fullName>Customer Service Error</fullName>
        </value>
        <value>
          <fullName>Dropped Implant</fullName>
        </value>
        <value>
          <fullName>E-commerce site</fullName>
        </value>
        <value>
          <fullName>Exchange</fullName>
        </value>
        <value>
          <fullName>Hardware</fullName>
        </value>
        <value>
          <fullName>Lost Shipment Error</fullName>
        </value>
        <value>
          <fullName>Orders</fullName>
        </value>
        <value>
          <fullName>Orders &amp; Billing</fullName>
        </value>
        <value>
          <fullName>Over Ordered</fullName>
        </value>
        <value>
          <fullName>Pricing System Error</fullName>
        </value>
        <value>
          <fullName>Product Related</fullName>
        </value>
        <value>
          <fullName>Return</fullName>
        </value>
        <value>
          <fullName>Sales Team Error</fullName>
        </value>
        <value>
          <fullName>Shipping</fullName>
        </value>
        <value>
          <fullName>Software</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>CaseReason__c</fullName>
    <description>Copy of Case Reasons</description>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Academy/Loyalty</fullName>
          <default>true</default>
          <label>Academy/Loyalty</label>
        </value>
        <value>
          <fullName>Account maintenance</fullName>
        </value>
        <value>
          <fullName>Account set up</fullName>
        </value>
        <value>
          <fullName>Account set up issues</fullName>
        </value>
        <value>
          <fullName>Assist with order placement</fullName>
        </value>
        <value>
          <fullName>Backorder follow up</fullName>
        </value>
        <value>
          <fullName>Cancelled order</fullName>
        </value>
        <value>
          <fullName>Carrier late delivery</fullName>
        </value>
        <value>
          <fullName>Carrier lost package</fullName>
        </value>
        <value>
          <fullName>CEREC direct connect</fullName>
        </value>
        <value>
          <fullName>Courtesy Credit</fullName>
        </value>
        <value>
          <fullName>Crash</fullName>
        </value>
        <value>
          <fullName>Credit</fullName>
        </value>
        <value>
          <fullName>Customer Complaint</fullName>
        </value>
        <value>
          <fullName>Customer notes not followed</fullName>
        </value>
        <value>
          <fullName>Customer payment</fullName>
        </value>
        <value>
          <fullName>Customer training</fullName>
        </value>
        <value>
          <fullName>Delay in Finance order release</fullName>
        </value>
        <value>
          <fullName>Delivered to Incorrect Address</fullName>
        </value>
        <value>
          <fullName>Duplicated Order</fullName>
        </value>
        <value>
          <fullName>Excessive phone wait time</fullName>
        </value>
        <value>
          <fullName>Excessive wait time for approval</fullName>
        </value>
        <value>
          <fullName>General inquiry</fullName>
        </value>
        <value>
          <fullName>Hardware</fullName>
        </value>
        <value>
          <fullName>Incorrect Article/s</fullName>
        </value>
        <value>
          <fullName>Incorrect articles picked</fullName>
        </value>
        <value>
          <fullName>Incorrect Components</fullName>
        </value>
        <value>
          <fullName>Incorrect Customer Number</fullName>
        </value>
        <value>
          <fullName>Incorrect Guide Type</fullName>
        </value>
        <value>
          <fullName>Incorrect Payment Terms</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>CaseSBU__c</fullName>
    <description>Copy of SBUs values</description>
    <label>Case SBU</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Country__c</fullName>
    <description>Copy of Country value</description>
    <label>Country</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Low</fullName>
          <default>true</default>
          <label>Low</label>
        </value>
        <value>
          <fullName>Normal</fullName>
        </value>
        <value>
          <fullName>High</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>SBU__c</fullName>
    <description>Copy of SBUs</description>
    <label>SBU</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>IMPL</fullName>
          <default>true</default>
          <label>IMPL</label>
        </value>
        <value>
          <fullName>ORTH</fullName>
        </value>
        <value>
          <fullName>ENDO</fullName>
        </value>
        <value>
          <fullName>PREV</fullName>
        </value>
        <value>
          <fullName>PROS</fullName>
        </value>
        <value>
          <fullName>REST</fullName>
        </value>
        <value>
          <fullName>CDCM</fullName>
        </value>
        <value>
          <fullName>IMAG</fullName>
        </value>
        <value>
          <fullName>INST</fullName>
        </value>
        <value>
          <fullName>TRCE</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>TBDSBU__c</fullName>
    <description>DON'T USE, replaced with CaseSBU__c to provide support for multiple SBUs.

Can't be deleted since it was used in old flow versions</description>
    <inlineHelpText>DON'T USE, replaced with CaseSBU__c to provide support for multiple SBUs.

Can't be deleted since it was used in old flow versions</inlineHelpText>
    <label>TBD SBU</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>IMPL</fullName>
          <default>true</default>
          <label>IMPL</label>
        </value>
        <value>
          <fullName>ORTH</fullName>
        </value>
        <value>
          <fullName>ENDO</fullName>
        </value>
        <value>
          <fullName>PREV</fullName>
        </value>
        <value>
          <fullName>PROS</fullName>
        </value>
        <value>
          <fullName>REST</fullName>
        </value>
        <value>
          <fullName>CDCM</fullName>
        </value>
        <value>
          <fullName>IMAG</fullName>
        </value>
        <value>
          <fullName>INST</fullName>
        </value>
        <value>
          <fullName>TRCE</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Service Cloud: SLA Priority</label>
  <pluralLabel>Service Cloud: SLA Priorities</pluralLabel>
</CustomObject>